test/parser/error/err_11_procedure_dup.pl0
program p; 
procedure f(); begin end; 
procedure f(); begin end; 
begin 
end